[gd_scene load_steps=83 format=3 uid="uid://brsx465dquftm"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4ooxt"]
[ext_resource type="PackedScene" uid="uid://dnmvvfjnb8mj5" path="res://scenes/attack.tscn" id="2_xd4ok"]
[ext_resource type="Shader" path="res://scenes/player.gdshader" id="3_58uln"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a7sce"]
shader = ExtResource("3_58uln")
shader_parameter/PRIMARY_COLOR = Vector4(1, 1, 1, 1)
shader_parameter/SECONDARY_COLOR = Vector4(1, 1, 1, 1)
shader_parameter/TERTIARY_COLOR = Vector4(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji4ey"]
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oishp"]
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8vk4"]
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8u6e"]
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_badt7"]
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vu86"]
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mww4d"]
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tjbc"]
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8n8x"]
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jos3u"]
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruqbc"]
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j5rt"]
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80n3h"]
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ki6w"]
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_413dr"]
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5ewx"]
region = Rect2(48, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eyjh"]
region = Rect2(64, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k5b4"]
region = Rect2(80, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q5fg"]
region = Rect2(0, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4y2m"]
region = Rect2(16, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws5da"]
region = Rect2(32, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yirpt"]
region = Rect2(48, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr07n"]
region = Rect2(64, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lig6"]
region = Rect2(80, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y65u6"]
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgms1"]
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5twf"]
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3r57"]
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h30cb"]
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nqgp"]
region = Rect2(80, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1eqm"]
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwhro"]
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_41l5w"]
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qehqc"]
region = Rect2(48, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0jt4"]
region = Rect2(64, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tohp"]
region = Rect2(80, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0jsw"]
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfxrj"]
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_csw2i"]
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4feb"]
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_murix"]
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7p4v"]
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1mdt"]
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_djg2o"]
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwtip"]
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8xej"]
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7xbf"]
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frtpr"]
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms3at"]
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_leumu"]
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cin20"]
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_am66t"]
region = Rect2(112, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu6mf"]
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nux2"]
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm6bt"]
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gaqr"]
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt7sw"]
region = Rect2(64, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvgo8"]
region = Rect2(80, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h3fn"]
region = Rect2(96, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_glj2j"]
region = Rect2(112, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1xpu"]
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7tku"]
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfqgi"]
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ohmh"]
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_djx41"]
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yyit"]
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mg23"]
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnpku"]
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nptuy"]
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywoaq"]
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep7jc"]
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvn4x"]
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qllp"]
region = Rect2(64, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3boh1"]
region = Rect2(80, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pblec"]
region = Rect2(96, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4dpb"]
region = Rect2(112, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7esu2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji4ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oishp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8vk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8u6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_badt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vu86")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mww4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tjbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8n8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jos3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruqbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j5rt")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80n3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ki6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_413dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5ewx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eyjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k5b4")
}],
"loop": true,
"name": &"idle_air",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q5fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4y2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws5da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yirpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr07n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lig6")
}],
"loop": true,
"name": &"idle_earth",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y65u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgms1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5twf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3r57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h30cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nqgp")
}],
"loop": true,
"name": &"idle_fire",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1eqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwhro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41l5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qehqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0jt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tohp")
}],
"loop": true,
"name": &"idle_water",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0jsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfxrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csw2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4feb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_murix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7p4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1mdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djg2o")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwtip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8xej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7xbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frtpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms3at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leumu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cin20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am66t")
}],
"loop": true,
"name": &"walk_air",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu6mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nux2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm6bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gaqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt7sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvgo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h3fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glj2j")
}],
"loop": true,
"name": &"walk_earth",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1xpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7tku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfqgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ohmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djx41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yyit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mg23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnpku")
}],
"loop": true,
"name": &"walk_fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nptuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywoaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep7jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvn4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qllp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3boh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pblec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4dpb")
}],
"loop": true,
"name": &"walk_water",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5qph"]
size = Vector2(7, 16)

[node name="player" type="CharacterBody2D"]
position = Vector2(120, 68)
collision_layer = 2
script = ExtResource("1_4ooxt")
SPEED = 60.0

[node name="Attack" type="Node2D" parent="."]

[node name="Attack" parent="Attack" instance=ExtResource("2_xd4ok")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_a7sce")
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_7esu2")
animation = &"idle_water"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -6)
shape = SubResource("RectangleShape2D_f5qph")

[node name="DashCooldown" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="player_attacks" from="." to="Attack/Attack" method="_on_player_player_attacks"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
